kube/3-deploy/1-core/02-storage/rook-ceph/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app rook-ceph
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # external Ceph cluster
    - fromCIDRSet:
        - cidr: "${IP_PVE_CEPH_CIDR}"
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # external Ceph cluster
    - toCIDRSet:
        - cidr: "${IP_PVE_CEPH_CIDR}"
    # k8s apiserver
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app ceph-rgw
  namespace: &ns rook-ceph
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: *app
      rook_object_store: "${CLUSTER_NAME_LOWER}"
  ingress:
    # ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "6953"
              protocol: TCP
            - port: "6953"
              protocol: UDP
            - port: "8080"
              protocol: TCP
            - port: "8080"
              protocol: UDP
    # allow CNPG to connect
    - fromEndpoints:
        - matchExpressions:
            - key: cnpg.io/cluster
              operator: Exists
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "6953"
              protocol: TCP
            - port: "6953"
              protocol: UDP
            - port: "8080"
              protocol: TCP
            - port: "8080"
              protocol: UDP
  egress:
    # ingress controller webhook admission
    - toServices:
        - k8sService:
            serviceName: ingress-nginx-controller-admission
            namespace: ingress
      toPorts:
        - ports:
            - port: "443"
